# frodobuf-examples

./: Makefile
actor-to-actor/: .gitignore  Makefile  README.md  manifest.yaml
actor-to-actor/ping-interface/: Cargo.toml  ping.midl  ping.proto
actor-to-actor/ping-interface/rust/: Cargo.toml  build.rs
actor-to-actor/ping-interface/rust/src/: lib.rs
actor-to-actor/pinger/: Cargo.toml  Makefile  README.md
actor-to-actor/pinger/src/: lib.rs
actor-to-actor/ponger/: Cargo.toml  Makefile
actor-to-actor/ponger/src/: lib.rs
calculator/: .gitignore  Makefile  README.md  manifest.yaml
calculator/actor/: Cargo.toml  Makefile  README.md
calculator/actor/src/: lib.rs
calculator/calc-interface/: Cargo.toml  calc.midl  calc.proto
calculator/calc-interface/rust/: Cargo.toml  build.rs
calculator/calc-interface/rust/src/: lib.rs
calculator/calc-provider/: .gitignore  Cargo.toml  Makefile  README.md
calculator/calc-provider/src/: lib.rs
echo/: Cargo.toml  Makefile  README.md  manifest.yaml
echo/src/: lib.rs
http-server/: .gitignore  Cargo.toml  Makefile  http-server.midl  http-server.proto  manifest.yaml
http-server/echo/: Cargo.toml  Makefile
http-server/echo/src/: lib.rs
http-server/rust/: Cargo.toml  build.rs
http-server/rust/src/: lib.rs
