[package]
name = "echo"
version = "0.3.0"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json ="1.0"
frodobuf = "0.1"
http-server = { path = "../http-server" }
wasmcloud-system-interface = "0.1"
futures = "0.3"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
