[package]
name = "echo"
version = "0.3.0"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json ="1.0"
http-server = { path = "../http-server" }
futures = "0.3"

[dependencies.wasmcloud-system-interface]
version = "0.1"
#path = "../../frodobuf/interfaces/system"
[dependencies.frodobuf]
version = "0.1"
#path = "../../frodobuf/frodobuf"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
