[package]
name = "ping"
edition = "2018"
version = "0.1.0"
build = "rust/build.rs"

[lib]
path = "rust/src/lib.rs"

[dependencies]
async-trait = "0.1"
serde_bytes = "0.11"
serde = { version="1.0", features = ["derive"]}

[dependencies.frodobuf]
version = "0.1"
#path = "../../../frodobuf/frodobuf"

# dependencies for build.rs
[build-dependencies]
anyhow = "1.0"
serde_json = "1.0"

[build-dependencies.frodobuf]
version = "0.1"
#path = "../../../frodobuf/frodobuf"
[build-dependencies.midl-parser]
version = "0.1"
#path = "../../../frodobuf/midl-parser"

[features]
default = []
