[package]
name = "pinger"
version = "0.1.5"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.123", features = ["derive"]}
serde_json = "1.0"
ping = { path = "../ping-interface/rust"}
system = { path = "../../../frodobuf/interfaces/system/rust" }
http-server = { path = "../../http-server/rust" }
frodobuf = { path = "../../../frodobuf/frodobuf" }
futures = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
