[package]
name = "pinger"
version = "0.1.5"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.123", features = ["derive"]}
serde_json = "1.0"
ping = { path = "../ping-interface"}
wasmcloud-system-interface = "0.1"
http-server = { path = "../../http-server/rust" }
frodobuf = "0.1"
futures = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
