[package]
name = "pinger"
version = "0.1.5"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.123", features = ["derive"]}
serde_json = "1.0"
ping = { path = "../ping-interface"}
http-server = { path = "../../http-server" }
futures = "0.3"

[dependencies.wasmcloud-system-interface]
version = "0.1"
#path = "../../../frodobuf/interfaces/system"

[dependencies.frodobuf]
version = "0.1"
#path = "../../../frodobuf/frodobuf"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
