[package]
name = "ponger"
version = "0.1.5"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
ping = { path = "../ping-interface"}

[dependencies.wasmcloud-system-interface]
version = "0.1"
path = "../../../frodobuf/interfaces/system"
[dependencies.frodobuf]
version = "0.1"
path = "../../../frodobuf/frodobuf"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
