[package]
name = "calc_actor"
version = "0.1.5"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
calc = { path = "../calc-interface" }
futures = "0.3"
http-server = { path = "../../http-server" }
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"]}

[dependencies.wasmcloud-system-interface]
version = "0.1"
#path = "../../../frodobuf/interfaces/system"
[dependencies.frodobuf]
version = "0.1"
#path = "../../../frodobuf/frodobuf"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
