[package]
name = "calc_provider"
version = "0.1.5"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
calc= { path = "../calc-interface" }
frodobuf = "0.1"
futures = "0.3"
wasmcloud-provider-core = "0.1"
wasmcloud-system-interface = "0.1"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
