[package]
name = "calc_provider"
version = "0.1.5"
authors = ["wasmcloud Team"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
calc= { path = "../calc-interface" }
futures = "0.3"
wasmcloud-provider-core = "0.1"

[dependencies.wasmcloud-system-interface]
version = "0.1"
#path = "../../../frodobuf/interfaces/system"
[dependencies.frodobuf]
version = "0.1"
#path = "../../../frodobuf/frodobuf"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
