[package]
name = "http-server"
edition = "2018"
version = "0.1.0"
build = "build.rs"

[dependencies]
frodobuf = { path="../../../frodobuf/frodobuf" }
serde = { version="1.0", features = ["derive"]}
async-trait = "0.1"
serde_bytes = "0.11"

# dependencies for build.rs
[build-dependencies]
frodobuf = { path = "../../../frodobuf/frodobuf" }
midl-parser = { path = "../../../frodobuf/midl-parser" }
anyhow = "1.0"
serde_json = "1.0"

[features]
default = []
